update: 更新版本关键字

--- a/package.json
+++ b/package.json
@@ -1,18 +1,19 @@
 {
   "name": "vite-plugin-lazy-thumbnails",
-  "version": "0.3.1",
+  "version": "0.3.2",
   "description": "一个 Vite 插件，用于生成图片缩略图并在页面加载时实现渐进式图片加载效果",
   "main": "./src/index.min.js",
   "keywords": [
     "插件",
     "图片懒加载",
     "缩略图片加载",
-    "lazy",
-    "thumbnail",
+    "vite-plugin-lazy-thumbnails",
+    "vite-plugin-lazy",
+    "vite-plugin",
     "vite",
     "plugin",
-    "loading",
-    "progressive"
+    "lazy",
+    "thumbnail"
   ],
   "scripts": {
     "type": "npx -p typescript tsc",
