--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vite-plugin-lazy-thumbnails",
-  "version": "0.3.2",
+  "version": "0.4.0",
   "description": "一个 Vite 插件，用于生成图片缩略图并在页面加载时实现渐进式图片加载效果",
   "main": "./src/index.min.js",
   "keywords": [
@@ -30,10 +30,10 @@
   },
   "homepage": "https://github.com/lixianbin1/vite-plugin-lazy-thumbnails#readme",
   "devDependencies": {
-    "sharp": "^0.32.0",
+    "terser": "^5.43.1",
     "typescript": "^5.3.3"
   },
   "dependencies": {
-    "terser": "^5.43.1"
+    "sharp": "^0.34.3"
   }
 }
