--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vite-plugin-lazy-thumbnails",
-  "version": "0.5.0",
+  "version": "0.5.2",
   "description": "一个 Vite 插件，用于生成图片缩略图并在页面加载时实现渐进式图片加载效果",
   "main": "./src/index.min.js",
   "keywords": [
@@ -30,14 +30,13 @@
   },
   "homepage": "https://github.com/lixianbin1/vite-plugin-lazy-thumbnails#readme",
   "devDependencies": {
-    "@babel/parser": "^7.28.0",
-    "@babel/traverse": "^7.28.0",
-    "magic-string": "^0.30.17",
     "terser": "^5.43.1",
-    "typescript": "^5.3.3",
-    "sharp": "^0.34.3"
+    "typescript": "^5.3.3"
   },
   "dependencies": {
-    
+    "sharp": "^0.34.3",
+    "@babel/parser": "^7.28.0",
+    "@babel/traverse": "^7.28.0",
+    "magic-string": "^0.30.17"
   }
 }
